--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ body {
 }
 
 main {
-  width: 89vw;
+  width: 90vw;
   margin: auto;
 }
 
@@ -689,6 +689,7 @@ main {
 
 .skill__content--stack:nth-child(9) {
   font-family: 'Bahiana', sans-serif;
+  position: absolute;
   top: 3.5rem;
   left: 5rem;
 }
@@ -707,110 +708,6 @@ main {
   left: 39rem;
 }
 
-
-
-
-
-/**********************************************
-            *** SKILL II ***
-**********************************************/
-
-/* .skill {
-  max-width: 100%;
-  margin: auto;
-  min-height: 100vh;
-  display: flex;
-  align-items: center;
-}
-
-.skill__content {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-   max-width: 100%; 
-  height: 50rem;
-  overflow-x: hidden;
-  flex-grow: 9;
-}
-
-.skill__box {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  margin: 0rem 5rem; 
-  width: 100%;
-  height: 100%;
-}
-
-.skill__box h3 {
-  display: flex;
-  justify-content: center;
-  font-size: 3rem;
-  color: #191c1f;
-  padding-bottom: 0.5rem;
-  margin-bottom: 4rem;
-}
-
-.skill__box-tech {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  height: 45%;
-  width: 100%;
-  margin: 0 auto;
-  min-height: 20
-  padding: 0 5r
-}
-
-.skill__box-picture {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  width: 100%;
-}
-
-.skill__box-picture img {
-  margin: 0.5rem auto;
-  padding-top: 0.7rem;
-  width: 7.5rem;
-}
-
-.skill__box-tool {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  height: 45%;
-  width: 100%;
-  margin: 1rem auto;
-  padding: 0 3.9rem;
-}
-
-.skill__box-tool img {
-  margin: 0 4rem;
-  padding-top: 0.7rem;
-  width: 7.5rem;
-}
-
-.skill__box-tool .icon-bulma {
-  height: auto;
-  width: 6.2rem;
-  ;
-}
-
-.skill__illustration {
-  position: relative;
-  flex-grow: 1;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.skill__illustration img {
-  width: 100%;
-  max-width: 600px;
-  min-width: 300px;
-} */
-
 /**********************************************
             *** PROJECT ***
 **********************************************/
@@ -818,16 +715,8 @@ main {
 .project {
   min-height: 100vh;
   max-width: 100%;
-  margin: auto;
-  padding-top: 3rem;
   display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.project-box {
-  margin: 0 auto;
-  max-width: 95%;
+  flex-direction: column;
 }
 
 .project-portfolio {
@@ -835,19 +724,18 @@ main {
   align-items: center;
   max-width: 94.5%;
   max-height: 95%;
-  margin: 0 auto;
+  height: 100%;
+  margin: 5rem auto;
   justify-content: center;
 }
 
 .project-content {
   display: flex;
   flex-direction: column;
-  align-content: space-between;
+  align-content: space-around;
+  height: 100%;
+  flex: 75% 1;
 }
-
-.project-content h3,
-.desc,
-.box-stack p {}
 
 .project-content h3 {
   font-size: 3rem;
@@ -858,9 +746,12 @@ main {
 }
 
 .project-content .desc {
-  font-size: 2rem;
-  max-width: 100%;
-  margin: 2rem 0 0 5rem;
+  font-size: 1.7rem;
+  line-height: 2.5rem;
+  letter-spacing: .02rem;
+  text-align: justify;
+  max-width: 85%;
+  margin: 1rem 0 0 5rem;
 }
 
 .box-stack {
@@ -869,15 +760,15 @@ main {
   justify-content: start;
   height: 6rem;
   max-width: 100%;
-  margin: 1.7rem 0 0 5rem;
+  margin: .5rem 0 0 5rem;
   padding: 1rem 0;
-
 }
 
 .box-stack p {
   padding: 0.5rem 1rem;
-  margin: 0.5rem;
+  margin: 0.65rem;
   font-size: 1.7rem;
+  font-weight: 400;
 }
 
 .highlith-stack {
@@ -891,7 +782,7 @@ main {
   align-items: center;
   height: 6rem;
   max-width: 100%;
-  margin: 2rem 0 0 5rem;
+  margin: .5rem 0 0 3rem;
 }
 
 .box-link img {
@@ -920,7 +811,6 @@ main {
 .btn-project {
   display: flex;
   justify-content: center;
-
   border-radius: 2.5rem;
   border: none;
   text-decoration: none;
@@ -933,11 +823,15 @@ main {
   transition: background-color 0.4s;
 }
 
+.project-illustration{
+  height: 25rem;
+  flex: 40% 1;
+}
 .project-illustration img {
-  max-width: 500px;
-  height: auto;
-  width: 90vw;
+  width: 100%;
+  height: 100%;
   margin: 0 auto;
+  
 }
 
 /**********************************************
