--- a/css/mq.css
+++ b/css/mq.css
@@ -256,6 +256,10 @@
         border-radius: 2.5rem;
     }
 
+    .project-illustration{
+        max-width: 70%;
+        margin-right: 12.5rem;
+    }
     .project-illustration img {
         max-width: 100%;
         height: 45vh;
@@ -418,6 +422,17 @@
 
     .skill__content--stack {
         font-size: 1.3rem;
+    }
+
+
+
+    .project-illustration{
+        max-width: 100%;
+        margin-left: 5rem;
+    }
+
+    .project-illustration img{
+        width: 100%;
     }
 
     .contact-illustration {
@@ -583,8 +598,13 @@
         font-size: 1.3rem;
     }
 
+    .project-illustration {
+        height: 45vh;
+        width: 45vw;
+        margin: 0 auto;
+    }
     .project-illustration img {
-        max-width: 100%;
+        width: 100%;
         height: 45vh;
         margin: 0 auto;
     }
