--- a/css/style.css
+++ b/css/style.css
@@ -719,7 +719,7 @@ main {
   flex-direction: column;
 }
 
-.project-portfolio {
+.project__portfolio {
   display: flex;
   align-items: center;
   max-width: 94.5%;
@@ -729,7 +729,7 @@ main {
   justify-content: center;
 }
 
-.project-content {
+.project__content {
   display: flex;
   flex-direction: column;
   align-content: space-around;
@@ -737,7 +737,7 @@ main {
   flex: 75% 1;
 }
 
-.project-content h3 {
+.project__content h3 {
   font-size: 3rem;
   font-weight: 400;
   max-width: 230%;
@@ -745,7 +745,7 @@ main {
   color: #191c1f;
 }
 
-.project-content .desc {
+.project__content .desc {
   font-size: 1.7rem;
   line-height: 2.5rem;
   letter-spacing: .02rem;
@@ -754,7 +754,7 @@ main {
   margin: 1rem 0 0 5rem;
 }
 
-.box-stack {
+.project__box--stack {
   display: flex;
   flex-direction: row;
   justify-content: start;
@@ -764,7 +764,7 @@ main {
   padding: 1rem 0;
 }
 
-.box-stack p {
+.project__box--stack p {
   padding: 0.5rem 1rem;
   margin: 0.65rem;
   font-size: 1.7rem;
@@ -777,7 +777,7 @@ main {
   background-color: #b9e4fd;
 }
 
-.box-link {
+.project__box--link {
   display: flex;
   align-items: center;
   height: 6rem;
@@ -785,7 +785,7 @@ main {
   margin: .5rem 0 0 3rem;
 }
 
-.box-link img {
+.project__box--link img {
   height: 4rem;
   width: 4rem;
   position: relative;
@@ -801,7 +801,7 @@ main {
   left: 1rem;
 }
 
-.box-link a {
+.project__box--link a {
   padding: 1rem 1.5rem;
   margin-left: 2rem;
   color: #fff;
@@ -823,11 +823,11 @@ main {
   transition: background-color 0.4s;
 }
 
-.project-illustration{
+.project__illustration{
   height: 25rem;
   flex: 40% 1;
 }
-.project-illustration img {
+.project__illustration img {
   width: 100%;
   height: 100%;
   margin: 0 auto;
