--- a/css/style.css
+++ b/css/style.css
@@ -815,7 +815,6 @@ main {
   border: none;
   text-decoration: none;
   text-transform: capitalize;
-  background-color: #31859bff;
 }
 
 .btn-project:hover {
@@ -831,8 +830,9 @@ main {
   width: 100%;
   height: 100%;
   margin: 0 auto;
-  
+  object-fit: cover;
 }
+
 
 /**********************************************
             *** CONTACT ***
