--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@ main {
   height: 8rem;
   width: 90%;
   margin: 35px auto;
-
+  position: sticky;
 }
 
 .navigation__logo-box {
@@ -148,7 +148,7 @@ main {
   text-align: center;
   line-height: 8rem;
   color: #fff;
-  margin-top: -10rem;
+  margin-top: -4rem;
 }
 
 .hero-text h2 {
@@ -165,13 +165,14 @@ main {
   cursor: pointer;
 }
 
+.hero-icon{
+  height: 10rem;
+}
+
 #icon-arrow {
   color: black;
   height: 55px;
   width: 55px;
-  position: absolute;
-  left: 0;
-  right: 0;
   margin: auto;
   bottom: 45px;
   font-size: 5rem;
@@ -247,7 +248,6 @@ main {
   background: rgba(255, 255, 255, 0.2);
   animation: animate 15s linear infinite;
   bottom: 150px;
-  ;
   -webkit-animation: animate 15s linear infinite;
 }
 
@@ -816,17 +816,19 @@ main {
   border: none;
   text-decoration: none;
   text-transform: capitalize;
-}
-
-.btn-project:hover {
-  background-color: rgb(68, 174, 201);
+  background-color: #44aec9;
   transition: background-color 0.4s;
 }
 
-.project__illustration{
+.btn-project:hover {
+  background-color: #19a1c4;
+}
+
+.project__illustration {
   height: 25rem;
   flex: 40% 1;
 }
+
 .project__illustration img {
   width: 100%;
   height: 100%;
@@ -906,7 +908,7 @@ main {
   margin-top: 5rem;
   height: 140px;
   max-width: 90%;
-  width: 33%;
+  width: 45%;
 }
 
 .contact-coordinates {
@@ -933,7 +935,7 @@ main {
 
 .box-mail img {
   position: absolute;
-  top: 0.5rem;
+  top: 1rem;
   left: 1rem;
   height: 4rem;
 }
@@ -1023,6 +1025,100 @@ footer p {
 /**********************************************
             *** ANIMATES ***
 **********************************************/
+
+@keyframes fade-in-right {
+  from {
+    opacity: 0;
+    transform: translateX(-15px);
+    -webkit-transform: translateX(-15px);
+    -moz-transform: translateX(-15px);
+    -ms-transform: translateX(-15px);
+    -o-transform: translateX(-15px);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateX(0);
+    -webkit-transform: translateX(0);
+    -moz-transform: translateX(0);
+    -ms-transform: translateX(0);
+    -o-transform: translateX(0);
+  }
+}
+
+@keyframes grow-left {
+  from {
+    transform: scaleX(0);
+    -webkit-transform: scaleX(0);
+    -moz-transform: scaleX(0);
+    -ms-transform: scaleX(0);
+    -o-transform: scaleX(0);
+  }
+
+  to {
+    transform: scaleX(1);
+    -webkit-transform: scaleX(1);
+    -moz-transform: scaleX(1);
+    -ms-transform: scaleX(1);
+    -o-transform: scaleX(1);
+  }
+}
+
+.fade , .fade3{
+  opacity: 0;
+  animation: fade-in-right ease 0.4s forwards;
+  -webkit-animation: fade-in-right ease 0.4s forwards;
+}
+
+.fade{
+  animation-delay: 0.4s;
+}
+
+.fade2{
+  transform: scaleX(0);
+  -webkit-transform: scaleX(0);
+  -moz-transform: scaleX(0);
+  -ms-transform: scaleX(0);
+  -o-transform: scaleX(0);
+  transform-origin: left;
+  animation: grow-left cubic-bezier(0.785, 0.135, 0.15, 0.86) 0.5s forwards;
+  -webkit-animation: grow-left cubic-bezier(0.785, 0.135, 0.15, 0.86) 0.5s forwards;
+  animation-delay: 0.8s;
+}
+
+.fade3{
+  animation-delay: 0.8s;
+}
+
+.element4{
+
+}
+
+.animated {
+  -webkit-animation: moveInBottom .5s ease-out .75s;
+  animation: moveInBottom .5s ease-out .75s;
+  -webkit-animation-fill-mode: backwards;
+  animation-fill-mode: backwards;
+  animation-delay: 1.5s;
+}
+
+@keyframes moveInBottom {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(-3rem)  ;
+    transform: translateY(-3rem)  ;
+    -moz-transform: translateY(-3rem)  ;
+    -ms-transform: translateY(-3rem)  ;
+    -o-transform: translateY(-3rem)  ;
+}
+
+  100% {
+    opacity: 1;
+    -webkit-transform: translate(0);
+    transform: translate(0)
+  }
+}
+
 
 .viber {
   color: #474E51;
