--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@
 html {
   font-size: 62.5%;
   font-family: 'Nunito', sans-serif;
-  scroll-behavior: smooth;
+  /* scroll-behavior: smooth; */
 }
 
 body {
@@ -27,12 +27,6 @@ main {
 }
 
 /**********************************************
-              *** FONTS ***
-**********************************************/
-
-
-
-/**********************************************
               *** NAVIGATION ***
 **********************************************/
 
@@ -43,7 +37,19 @@ main {
   height: 8rem;
   width: 90%;
   margin: 35px auto;
-  position: sticky;
+  position: fixed;
+  transition: 0.6s;
+  -webkit-transition: 0.6s;
+  -moz-transition: 0.6s;
+  -ms-transition: 0.6s;
+  -o-transition: 0.6s;
+  z-index: 100000;
+}
+
+.navigation.sticky {
+  /* padding: 5px 100px; */
+  margin: 0px auto;
+  background: #31859bff;
 }
 
 .navigation__logo-box {
@@ -52,11 +58,14 @@ main {
   cursor: pointer;
   height: 3.25rem;
   font-weight: 900;
+  padding: 1rem 2rem;
 }
 
 .navigation__logo {
   color: #fff;
   text-decoration: none;
+  text-transform: uppercase;
+  letter-spacing: 2px;
   font-size: 3rem;
   font-weight: bold;
 }
@@ -93,6 +102,11 @@ main {
   color: #fff;
   font-size: 2.3rem;
   flex-shrink: 1;
+  transition: 0.6s;
+  -webkit-transition: 0.6s;
+  -moz-transition: 0.6s;
+  -ms-transition: 0.6s;
+  -o-transition: 0.6s;
 }
 
 .bord {
@@ -165,7 +179,7 @@ main {
   cursor: pointer;
 }
 
-.hero-icon{
+.hero-icon {
   height: 10rem;
 }
 
@@ -1064,17 +1078,18 @@ footer p {
   }
 }
 
-.fade , .fade3{
+.fade,
+.fade3 {
   opacity: 0;
   animation: fade-in-right ease 0.4s forwards;
   -webkit-animation: fade-in-right ease 0.4s forwards;
 }
 
-.fade{
+.fade {
   animation-delay: 0.4s;
 }
 
-.fade2{
+.fade2 {
   transform: scaleX(0);
   -webkit-transform: scaleX(0);
   -moz-transform: scaleX(0);
@@ -1086,13 +1101,11 @@ footer p {
   animation-delay: 0.8s;
 }
 
-.fade3{
+.fade3 {
   animation-delay: 0.8s;
 }
 
-.element4{
-
-}
+.element4 {}
 
 .animated {
   -webkit-animation: moveInBottom .5s ease-out .75s;
@@ -1105,12 +1118,12 @@ footer p {
 @keyframes moveInBottom {
   0% {
     opacity: 0;
-    -webkit-transform: translateY(-3rem)  ;
-    transform: translateY(-3rem)  ;
-    -moz-transform: translateY(-3rem)  ;
-    -ms-transform: translateY(-3rem)  ;
-    -o-transform: translateY(-3rem)  ;
-}
+    -webkit-transform: translateY(-3rem);
+    transform: translateY(-3rem);
+    -moz-transform: translateY(-3rem);
+    -ms-transform: translateY(-3rem);
+    -o-transform: translateY(-3rem);
+  }
 
   100% {
     opacity: 1;
