--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@
 
 html {
   font-size: 62.5%;
-  font-family: 'Nunito', sans-serif;
+  font-family: 'Poppins', sans-serif;
   /* scroll-behavior: smooth; */
 }
 
@@ -22,160 +22,162 @@ body {
 }
 
 main {
-  width: 90vw;
+  width: 100vw;
   margin: auto;
 }
+
+/**********************************************
+              *** VARIABLES ***
+**********************************************/
+
+:root {
+  --color-primary: #31859bff;
+  --color-primary-light: #348aa0;
+  --color-grey-light: #fafafa;
+  --color-grey: #e1e0e0;
+  --color-grey-light-2: #ccc;
+  --color-grey-dark-2: #777;
+  --color-secondary: #e74c3c;
+  --color-white: #fff;
+}
+
+
+/**********************************************
+              *** HOME ***
+**********************************************/
+
+
+.home {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
 
 /**********************************************
               *** NAVIGATION ***
 **********************************************/
 
+nav {
+  width: 100%;
+  position: fixed;
+  transition: all 0.2s;
+  z-index: 1000;
+  color: var(--color-white);
+}
+
 .navigation {
   display: flex;
+  justify-content: space-around;
   align-items: center;
-  justify-content: space-between;
-  height: 8rem;
-  width: 90%;
-  margin: 35px auto;
-  position: fixed;
-  transition: 0.6s;
-  -webkit-transition: 0.6s;
-  -moz-transition: 0.6s;
-  -ms-transition: 0.6s;
-  -o-transition: 0.6s;
-  z-index: 100000;
+  padding: 0px 30px;
+  transition: background 0.2s;
+  -webkit-transition: background 0.2s;
+  -moz-transition: background 0.2s;
+  -ms-transition: background 0.2s;
+  -o-transition: background 0.2s;
+
 }
 
-.navigation.sticky {
-  /* padding: 5px 100px; */
-  margin: 0px auto;
-  background: #31859bff;
+.navigation h2 {
+  font-size: 3.5rem;
+  padding: 60px 0 5px 0;
+
 }
 
-.navigation__logo-box {
+.navigation__items {
   display: flex;
-  align-items: center;
-  cursor: pointer;
-  height: 3.25rem;
-  font-weight: 900;
-  padding: 1rem 2rem;
 }
 
-.navigation__logo {
-  color: #fff;
+.navigation__items a {
+  box-sizing: border-box;
+  padding: 60px 0 5px 0;
+  margin: 0 30px;
+  font-size: 2.5rem;
   text-decoration: none;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  font-size: 3rem;
-  font-weight: bold;
+  outline-style: none;
+  color: white;
+  transition: margin 0.2s;
+  -webkit-transition: margin 0.2s;
+  -moz-transition: margin 0.2s;
+  -ms-transition: margin 0.2s;
+  -o-transition: margin 0.2s;
 }
 
-.navigation__list-box {
-  display: flex;
-  justify-content: flex-end;
-  z-index: 1000;
-  max-width: 100%;
-  font-weight: 400;
+.navigation__items a:hover {
+  border: none;
+  margin-top: -3px;
 }
 
-.navigation__list {
-  list-style-type: none;
-  height: 100%;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.navigation__scroll {
+  font-size: 2rem;
+  transition: all 0.5s;
+  -webkit-transition: all 0.5s;
+  -moz-transition: all 0.5s;
+  -ms-transition: all 0.5s;
+  -o-transition: all 0.5s;
+  color: white;
+  background: var(--color-primary);
 }
 
-.navigation__item {
-  display: inline-block;
-  padding: 1rem 2rem;
-  align-items: center;
-  position: relative;
-  flex-shrink: 1;
-  text-align: center;
-  text-transform: capitalize;
+.navigation__scroll h2 {
+  font-size: 2.5rem;
+  padding: 20px 0;
 }
 
-.navigation__link {
-  text-decoration: none;
-  color: #fff;
-  font-size: 2.3rem;
-  flex-shrink: 1;
-  transition: 0.6s;
-  -webkit-transition: 0.6s;
-  -moz-transition: 0.6s;
-  -ms-transition: 0.6s;
-  -o-transition: 0.6s;
+.navigation__scroll .navigation__items a {
+  font-size: 2rem;
+  padding: 1rem 0;
+  border: none;
+  border-bottom: 3px solid transparent;
+  transition: all .3s;
+  -webkit-transition: all .3s;
+  -moz-transition: all .3s;
+  -ms-transition: all .3s;
+  -o-transition: all .3s;
+  color: white;
 }
 
-.bord {
-  display: inline-block;
-  position: relative;
+.navigation__scroll .navigation__items a:hover {
+  /* border-color: var(--color-secondary); */
 }
 
-.bord::after {
-  content: '';
-  position: absolute;
-  width: 100%;
-  transform: scaleX(0);
-  height: 2.5px;
-  bottom: -5px;
-  left: 0;
-  background-color: #fff;
-  transform-origin: bottom right;
-  transition: transform 0.4s cubic-bezier(0.86, 0, 0.07, 1);
-}
-
-.bord:hover::after {
-  transform: scaleX(1);
-  transform-origin: bottom left;
+.navigation__scroll .navigation__items a.active {
+  /* border-color: var(--color-secondary); */
 }
 
 
 /**********************************************
-          *** HOME SECTION *** - START
+          *** HERO SECTION *** - START
 **********************************************/
 
-.home {
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  position: relative;
-}
+
 
 .hero-text {
-  flex-grow: 1;
-  position: relative;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
+  align-items: center;
+  position: relative;
+  top: 32rem;
+  height: 20%;
+  flex-grow: 1;
   z-index: 11;
   max-width: 150rem;
-  margin: 0 auto;
 }
 
 .hero-text h1 {
   font-weight: 700;
-  font-size: 8.5rem;
+  font-size: 6rem;
   text-align: center;
   line-height: 8rem;
-  color: #fff;
+  color: var(--color-white);
   margin-top: -4rem;
 }
 
-.hero-text h2 {
-  font-weight: 300;
-  font-size: 6rem;
-  line-height: 10rem;
-  font-weight: 300;
-  color: #fff;
-  text-align: center;
-}
-
 .hero-text img {
-  width: 5rem;
+  width: 4rem;
+  margin-left: .5rem;
   cursor: pointer;
 }
 
@@ -183,32 +185,13 @@ main {
   height: 10rem;
 }
 
-#icon-arrow {
-  color: black;
-  height: 55px;
-  width: 55px;
-  margin: auto;
-  bottom: 45px;
-  font-size: 5rem;
-  line-height: 8rem;
-  cursor: pointer;
-  text-align: center;
-  text-decoration: none;
-  border-radius: 50%;
-  background: white;
-  box-shadow: 0 0 0 0 #fff;
-  z-index: 11;
+#arrow {
+  box-shadow: 0 0 0 0 var(--color-white);
   animation: pulse 1.9s infinite;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
-  -ms-border-radius: 50%;
-  -o-border-radius: 50%;
+
 }
 
-#icon-arrow:focus {
+#arrow:focus {
   display: none;
 }
 
@@ -224,18 +207,13 @@ main {
   }
 }
 
-.is-visible {
-  opacity: 0;
-  pointer-events: auto;
-}
-
 
 /**********************************************
             *** HOME SECTION *** - END
 **********************************************/
 
 .banner {
-  background: #31859bff;
+  background: var( --color-primary-light);
   background: -webkit-linear-gradient(to left, #31859bff, #31859bff);
   width: 100%;
   height: 100vh;
@@ -557,7 +535,7 @@ main {
   text-decoration: none;
   padding: 1rem 2rem;
   margin: 1rem;
-  color: #fff;
+  color: var(--color-white);
   background-color: #31859bff;
 }
 
@@ -819,7 +797,7 @@ main {
 .project__box--link a {
   padding: 1rem 1.5rem;
   margin-left: 2rem;
-  color: #fff;
+  color: var(--color-white);
   font-size: 1.5rem;
 }
 
@@ -1006,7 +984,7 @@ footer {
 }
 
 footer p {
-  color: #fff;
+  color: var(--color-white);
   font-size: 2rem;
 }
 
@@ -1078,8 +1056,7 @@ footer p {
   }
 }
 
-.fade,
-.fade3 {
+.fade{
   opacity: 0;
   animation: fade-in-right ease 0.4s forwards;
   -webkit-animation: fade-in-right ease 0.4s forwards;
@@ -1089,7 +1066,7 @@ footer p {
   animation-delay: 0.4s;
 }
 
-.fade2 {
+.fadet {
   transform: scaleX(0);
   -webkit-transform: scaleX(0);
   -moz-transform: scaleX(0);
@@ -1101,11 +1078,6 @@ footer p {
   animation-delay: 0.8s;
 }
 
-.fade3 {
-  animation-delay: 0.8s;
-}
-
-.element4 {}
 
 .animated {
   -webkit-animation: moveInBottom .5s ease-out .75s;
@@ -1118,18 +1090,37 @@ footer p {
 @keyframes moveInBottom {
   0% {
     opacity: 0;
-    -webkit-transform: translateY(-3rem);
-    transform: translateY(-3rem);
-    -moz-transform: translateY(-3rem);
-    -ms-transform: translateY(-3rem);
-    -o-transform: translateY(-3rem);
-  }
+    transform: translateX(-30px);
+    -webkit-transform: translateX(-30px);
+    -moz-transform: translateX(-30px);
+    -ms-transform: translateX(-30px);
+    -o-transform: translateX(-30px);
+}
 
   100% {
     opacity: 1;
     -webkit-transform: translate(0);
     transform: translate(0)
   }
+}
+
+.appearingArrow{
+  -webkit-animation: appearing .5s ease-out .75s;
+  animation: appearing .5s ease-out .75s;
+  -webkit-animation-fill-mode: backwards;
+  animation-fill-mode: backwards;
+  animation-delay: 2s;
+}
+
+@keyframes appearing {
+  0% {
+    opacity: 0;
+}
+
+  100% {
+    opacity: 1;
+
+}
 }
 
 
@@ -1174,6 +1165,31 @@ footer p {
   animation-name: btnEntrance;
 }
 
+/* BORD */
+
+.bord {
+  display: inline-block;
+  position: relative;
+}
+
+.bord::after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 2.5px;
+  bottom: 0px;
+  left: 0;
+  background: var(--color-white);
+  transform-origin: bottom right;
+  transition: transform 0.4s cubic-bezier(0.86, 0, 0.07, 1);
+}
+
+.bord:hover::after {
+  transform: scaleX(1);
+  transform-origin: bottom left;
+} 
+
 /* fadeInUp */
 @keyframes btnEntrance {
   from {
@@ -1203,5 +1219,49 @@ footer p {
   to {
     opacity: 0;
     transform: translate3d(0, 100%, 0);
+  }
+}
+
+.mouseScroll {
+  display: block;
+  width: 26px;
+  height: 42px;
+  border-radius: 20px;
+  border: 2px solid var(--color-white);
+  text-align: center;
+  position: absolute;
+  left: 0px;
+  right: 0px;
+  bottom: 20px;
+  margin: 0 auto;
+  transition: opacity 0.5s;
+}
+
+.mouseScroll::before {
+  content: '';
+  display: inline-block;
+  width: 4px;
+  height: 8px;
+  position: relative;
+  border-radius: 4px;
+  background: var(--color-white);
+  -webkit-animation: scrollWheel 2s infinite;
+  animation-duration: .7s;
+  animation-iteration-count: infinite;
+  box-sizing: border-box;
+}
+
+.mouseScroll:hover {
+  cursor: pointer;
+  opacity: .5;
+}
+
+@keyframes scrollWheel {
+  from {
+    top: 15px;
+  }
+
+  to {
+    top: 25px;
   }
 }
